bugfix: null checks on events and clubs setting default createdBy as admin